style contact fix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel='stylesheet' id='wc-block-vendors-style-css' href='./assets/css/vendors-style.css' type='text/css'
 		media='all' />
 	<link rel='stylesheet' id='wc-block-style-css' href='./assets/css/style.build.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='contact-form-7-css' href='./assets/css/style.contact' type='text/css' media='all' />
+	<link rel='stylesheet' id='contact-form-7-css' href='./assets/css/style.contact.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='font-awesome-four-css' href='./assets/css/font-awesome.min.css' type='text/css'
 		media='all' />
 	<link rel='stylesheet' id='ot-vertical-menu-css-css' href='./assets/css/style.flatsome.css' type='text/css'
